--- a/SpectroPolarisClient/AndroidManifest.xml
+++ b/SpectroPolarisClient/AndroidManifest.xml
@@ -6,9 +6,8 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
-    
-    <uses-permission 
-        android:name="android.permission.INTERNET">
+
+    <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
 
     <application
@@ -29,6 +28,12 @@
             android:name=".JoinActivity"
             android:label="@string/title_activity_join"
             android:screenOrientation="landscape" >
+        </activity>
+        <activity
+            android:name=".GameActivity"
+            android:label="@string/title_activity_game"
+            android:screenOrientation="landscape" >
+
         </activity>
     </application>
 
