--- a/SpectroPolarisClient/AndroidManifest.xml
+++ b/SpectroPolarisClient/AndroidManifest.xml
@@ -7,8 +7,8 @@
         android:minSdkVersion="8"
         android:targetSdkVersion="15" />
 
-    <uses-permission android:name="android.permission.INTERNET" >
-    </uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
     <application
         android:icon="@drawable/ic_launcher"
